# memhuntr

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_EDA_and_cleaning.ipynb  02_feature_engineering.ipynb  03_model_training_evaluation.ipynb
src/: cli.py  extraction.py  inference.py
tests/: test_cli.py  test_extraction.py  test_inference.py
